tests/baselines/reference/interfaceWithMultipleBaseTypes2.errors.txt
tests/cases/conformance/interfaces/interfaceDeclarations/interfaceWithMultipleBaseTypes2.ts(17,11): error TS2430: Interface 'Derived2' incorrectly extends interface 'Base'.
  Types of property 'x' are incompatible.
    Type '{ a: 数字; b: 文字; }' is not assignable to type '{ a?: 文字; b: 文字; }'.
      Types of property 'a' are incompatible.
        Type '数字' is not assignable to type '文字'.


==== tests/cases/conformance/interfaces/interfaceDeclarations/interfaceWithMultipleBaseTypes2.ts (1 errors) ====
    interface Base {
        x: {
            a?: string; b: string;
        }
    }
    
    interface Base2 {
        x: {
            b: string; c?: number;
        }
    }
    
    interface Derived extends Base, Base2 {
        x: { b: string }
    }
    
    interface Derived2 extends Base, Base2 { // error
              ~~~~~~~~
!!! error TS2430: Interface 'Derived2' incorrectly extends interface 'Base'.
!!! error TS2430:   Types of property 'x' are incompatible.
!!! error TS2430:     Type '{ a: 数字; b: 文字; }' is not assignable to type '{ a?: 文字; b: 文字; }'.
!!! error TS2430:       Types of property 'a' are incompatible.
!!! error TS2430:         Type '数字' is not assignable to type '文字'.
        x: { a: number; b: string }
    }
    
    interface Derived3 extends Base, Base2 {
        x: { a: string; b: string }
    }
    
    